--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -10,111 +10,111 @@
             type="com.example.exercisetracker.db.UserExercise"/>
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
 
-        <View
-            android:id="@+id/divider_top"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="?attr/dividerHorizontal"
-            android:layout_marginTop="@dimen/margin_between_elements"
-            android:layout_marginBottom="@dimen/margin_between_elements"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/exercise_icon_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_between_elements"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/button_layout">
-
-            <ImageView
-                android:id="@+id/exercise_icon"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/exercise_icon_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_between_elements"
-                tools:src="@drawable/runner_img"/>
+                android:layout_margin="@dimen/margin_between_elements"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/exercise_descript">
 
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/exercise_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:src="@drawable/runner_img" />
+            </androidx.cardview.widget.CardView>
 
+                <TextView
+                    style="@style/headerText"
+                    android:id="@+id/exercise_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_between_elements"
+                    android:text="@{exercise.name}"
+                    app:layout_constraintStart_toEndOf="@id/exercise_icon_card"
+                    app:layout_constraintTop_toTopOf="@id/exercise_icon_card"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="Exercise-navn"/>
 
-        <TextView
-            style="@style/headerText"
-            android:id="@+id/exercise_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_between_elements"
-            android:text="@{exercise.name}"
-            android:textSize="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider_top"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Exercise-navn"/>
-
-        <TextView
-            android:id="@+id/exercise_descript"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_between_elements"
-            android:layout_marginStart="@dimen/side_margin"
-            android:text="@{exercise.description}"
-            android:minLines="3"
-            app:layout_constraintStart_toEndOf="@id/exercise_icon_card"
-            app:layout_constraintTop_toBottomOf="@id/exercise_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Exercise-beskrivelse bla bla bla bla bla. Dette er en beskrivelse av et treningsprogram."/>
-
-        <LinearLayout
-            android:id="@+id/button_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/exercise_descript"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <Button
-                style="@style/Widget.MaterialComponents.Button"
-                android:id="@+id/button_add"
-                android:layout_width="@dimen/button_size_small"
+            <TextView
+                android:id="@+id/exercise_descript"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_between_elements"
-                android:layout_marginStart="@dimen/margin_between_elements"
-                app:icon="@drawable/add_img"
-                app:layout_constraintEnd_toStartOf="@id/button_remove"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginTop="@dimen/margin_between_elements"
+                android:layout_marginStart="@dimen/side_margin"
+                android:text="@{exercise.description}"
+                android:minLines="3"
+                app:layout_constraintStart_toEndOf="@id/exercise_icon_card"
+                app:layout_constraintTop_toBottomOf="@id/exercise_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="Exercise-beskrivelse bla bla bla bla bla. Dette er en beskrivelse av et treningsprogram."/>
 
-            <Button
-                style="@style/Widget.MaterialComponents.Button"
-                android:id="@+id/button_remove"
-                android:layout_width="@dimen/button_size_small"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/exercise_buttons_card"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:layout_marginEnd="@dimen/margin_between_elements"
-                app:icon="@drawable/delete_bin_img"
-                app:layout_constraintEnd_toStartOf="@id/button_remove"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_margin="@dimen/margin_between_elements"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="4dp"
+                app:layout_constraintTop_toBottomOf="@id/exercise_descript"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <LinearLayout
+                    android:id="@+id/button_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:id="@+id/button_add"
+                        android:layout_width="@dimen/button_size_small"
+                        android:layout_height="@dimen/button_height"
+                        android:layout_marginEnd="@dimen/margin_between_elements"
+                        app:icon="@drawable/add_img" />
+
+                    <Button
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:id="@+id/button_remove"
+                        android:layout_width="@dimen/button_size_small"
+                        android:layout_height="@dimen/button_height"
+                        android:visibility="visible"
+                        android:layout_marginEnd="@dimen/margin_between_elements"
+                        app:icon="@drawable/delete_bin_img"
+                        app:layout_constraintEnd_toStartOf="@id/button_remove"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-            <Button
-                style="@style/Widget.MaterialComponents.Button"
-                android:id="@+id/button_edit"
-                android:layout_width="@dimen/button_size_small"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_between_elements"
-                app:icon="@drawable/edit_img"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                    <Button
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:id="@+id/button_edit"
+                        android:layout_width="@dimen/button_size_small"
+                        android:layout_height="@dimen/button_height"
+                        android:layout_marginEnd="@dimen/margin_between_elements"
+                        app:icon="@drawable/edit_img"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
-        </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
