--- a/app/src/main/res/layout/fragment_my_exercises.xml
+++ b/app/src/main/res/layout/fragment_my_exercises.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/side_margin"
+    android:layout_marginStart="@dimen/side_margin"
+    android:layout_marginEnd="@dimen/side_margin"
     tools:context=".MyExercisesFragment">
 
     <TextView
