--- a/app/src/main/res/layout/fragment_program_session.xml
+++ b/app/src/main/res/layout/fragment_program_session.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00:00:00"
-                android:textSize="24sp"
+                android:textSize="27sp"
                 android:layout_gravity="center_horizontal" />
 
             <ImageView
@@ -117,16 +117,20 @@
                         android:orientation="vertical">
 
                         <Button
+                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                             android:id="@+id/button_gallery"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            app:icon="@drawable/baseline_photo_album_24"
                             android:text="@string/select_from_gallery" />
 
                         <Button
+                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                             android:id="@+id/button_camera"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/take_new_picture" />
+                            android:text="@string/take_new_picture"
+                            app:icon="@drawable/baseline_photo_camera_24"/>
                     </LinearLayout>
                 </LinearLayout>
                 <androidx.recyclerview.widget.RecyclerView
@@ -166,6 +170,7 @@
             android:paddingTop="16dp">
 
             <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/start_pause_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -174,12 +179,13 @@
         </LinearLayout>
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/save_workout_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lagre treningsøkt"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="@dimen/margin_between_elements" />
     </LinearLayout>
         </LinearLayout>
     </LinearLayout>
